changes to JavaFX simulation replay visualization